# kicad-python

./: .gitignore  .gitmodules  COMPILING.md  README.md  build.py  noxfile.py  pyproject.toml
.github/workflows/: upstream-sync.yaml
.gitlab/: Fedora-Linux-CI.yml  docs.yml
docs/: Dockerfile  conf.py
examples/: create_zone.py  hello.py  tracks.py  version.py
examples/layer_indicator/: layer_indicator.py  plugin.json  requirements.txt
examples/round_tracks/: plugin.json  requirements.txt  round_tracks_action.py  round_tracks_utils.py
examples/round_tracks/ui/: round_tracks_gui.py
examples/tracks/: plugin.json  requirements.txt  tracks.py
kipy/: __init__.py  board.py  board_types.py  client.py  common_types.py  errors.py  geometry.py  kicad.py  project.py  project_types.py  wrapper.py
kipy/board/commands/: board_management_pb2.py  board_objects_pb2.py  commands.py
kipy/board/types/: board_pb2.py  track_pb2.py
kipy/common/: envelope_pb2.py
kipy/common/commands/: __init__.py  commands.py  commit_pb2.py  editor_commands_pb2.py  get_version_pb2.py  run_action_pb2.py
kipy/common/types/: api_status_pb2.py  command_status_pb2.py  frame_type_pb2.py  kiid_pb2.py  version_pb2.py
kipy/enums/: __init__.py  _enums.py
kipy/util/: __init__.py  board_layer.py  proto.py  units.py
tests/: test_geometry.py
tools/: enums.py  enums_template.py  generate_protos.py
