[tool.poetry]
name = "kipy"
version = "0.1.0a0"
description = "KiCad API Python Bindings"
authors = ["The KiCad Development Team"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^4.21.12"
pynng = "^0.7.2"
Jinja2 = "^3.1.2"
protoletariat = "^3.2.19"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
