[project]
name = "kicad-python"
version = "0.1.2+dev"
description = "KiCad API Python Bindings"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "The KiCad Development Team" }]
keywords = ["KiCad", "EDA", "API", "Python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
urls.homepage = "https://kicad.org/"
urls.repository = "https://gitlab.com/kicad/code/kicad-python"
urls.documentation = "https://kicad-python-python.readthedocs.io/en/latest/"
dependencies = ["protobuf (>=5.29,<6)", "pynng (>=0.8.0,<0.9)"]

[tool.poetry]
packages = [{ include = "kipy" }]
include = ["**/kipy/**/*.py", "**/kipy/**/*.pyi"]

[tool.poetry.group.dev.dependencies]
nox = "^2024.10.9"
ruff = "^0.8"
protoletariat = "^3.3"
mypy-protobuf = "^3.6"
poetry-plugin-export = "^1.8"
mypy = "^1.14.0"
setuptools = "^75.6.0"
sphinx = "7.4"
furo = "^2024.8.6"
pytest = "^8.3.4"

[build-system]
requires = [
    "poetry-core",
    "protoletariat == 3.3.*",
    "setuptools",
    "mypy-protobuf == 3.6.*",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.ruff]
exclude = ["kipy/proto"]

[tool.mypy]
exclude = ["kipy/proto"]

[[tool.mypy.overrides]]
module = "pynng"
ignore_missing_imports = true
